# artificial_intelligence_project

cr_analysis/: analyze_clusters.py  run_clustering.py  train_predictor.py
cr_analysis/cr_deck_cluster/: Cargo.toml  pyproject.toml
cr_analysis/cr_deck_cluster/src/: clustering.rs  data_loader.rs  lib.rs
cr_data_collector/: Cargo.toml
cr_data_collector/src/: api_client.rs  api_models.rs  config.rs  db.rs  main.rs
