[package]
name = "cr_data_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-sqlite = "0.11.0"
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time"] }
