[package]
name = "cr_deck_cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_deck_cluster"
crate-type = ["cdylib"]

[dependencies]
linfa = "0.7.1"
linfa-clustering = "0.7.1"
ndarray = "0.15.6"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
rand_xoshiro = "0.6"
rand = "0.8.5"
